# trumpetsim

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
src/: draw.cpp  draw.h  main.cpp
